# work-logging

./: .activity-partition  CMakeLists.txt  __init__.py  activity.py  reporting  start_or_stop.py  start_or_stop_hrp2  start_or_stop_hrp2.py  statistics.py  switch_activity.py  work_sheet.py
